Fix clear search button width on mobile view.

--- a/src/styles/bookshelf.scss
+++ b/src/styles/bookshelf.scss
@@ -154,6 +154,7 @@ $book_brown: rgba(77, 63, 63, 0.63);
       top: 85%;
       left: none;
       width: 18%;
+      min-width: 70px;
     }
     .main__searchwrapper {
       width: 101vw;
